agora quando o usuario passa o mouse por cima do comentario a div muda a cor

--- a/src/App.css
+++ b/src/App.css
@@ -121,6 +121,10 @@ nav > div i{
   background: #EFEFEF;
 }
 
+.comment p:hover{
+  background: #F9F9F9;
+}
+
 .comment span{
   font-weight: bold;
   margin-right: 6px;
